RESOLVED FIXED199243
[iPadOS] Fix another crash in -[UIPreviewTarget initWithContainer:center:transform:] when generating a fallback targeted preview
https://bugs.webkit.org/show_bug.cgi?id=199243
Summary [iPadOS] Fix another crash in -[UIPreviewTarget initWithContainer:center:tran...
Wenson Hsieh
Reported 2019-06-26 16:29:29 PDT
Attachments
Patch (3.74 KB, patch)
2019-06-26 16:31 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-06-26 16:31:59 PDT
WebKit Commit Bot
Comment 2 2019-06-26 17:18:25 PDT
Comment on attachment 372965 [details] Patch Clearing flags on attachment: 372965 Committed r246859: <https://trac.webkit.org/changeset/246859>
WebKit Commit Bot
Comment 3 2019-06-26 17:18:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.